--- a/source/index.html
+++ b/source/index.html
@@ -67,7 +67,7 @@
         <ol class="advantages__list">
           <li class="advantages__item advantages__item--image">
               <div class="advantages__item-content advantages__item-content--large">
-                <h3 class="advantages__title advantages__title--accent">Настоящий<br> городок</h3>
+                <h3 class="advantages__title advantages__title--accent">Настоящий<br>&nbsp;городок</h3>
                 <span class="advantages__number advantages__number--accent">— №1 —</span>
                 <p class="advantages__description advantages__description--accent">Седона не аттракцион для туристов, там
                   течет своя жизнь</p>
@@ -95,7 +95,7 @@
           </li>
           <li class="advantages__item advantages__item--image">
             <div class="advantages__item-content">
-              <h3 class="advantages__title advantages__title--accent">Там есть<br> мост дьявола</h3>
+              <h3 class="advantages__title advantages__title--accent">Там есть<br>&nbsp;мост дьявола</h3>
               <span class="advantages__number advantages__number--accent">— №2 —</span>
               <p class="advantages__description advantages__description--accent">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
             </div>
@@ -108,21 +108,21 @@
           </li>
           <li class="advantages__item advantages__item--background">
             <div class="advantages__item-content">
-            <h3 class="advantages__title">Небольшая<br> площадь</h3>
+            <h3 class="advantages__title">Небольшая<br>&nbsp;площадь</h3>
             <span class="advantages__number">— №3 —</span>
             <p class="advantages__description">Все интересные места находятся очень близко</p>
             </div>
           </li>
           <li class="advantages__item advantages__item--background">
             <div class="advantages__item-content">
-            <h3 class="advantages__title">Красивая<br> дорога</h3>
+            <h3 class="advantages__title">Красивая<br>&nbsp;дорога</h3>
             <span class="advantages__number">— №4 —</span>
             <p class="advantages__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </div>
           </li>
           <li class="advantages__item advantages__item--background">
             <div class="advantages__item-content">
-            <h3 class="advantages__title">Мало<br> туристов</h3>
+            <h3 class="advantages__title">Мало<br>&nbsp;туристов</h3>
             <span class="advantages__number">— №5 —</span>
             <p class="advantages__description">Большинство едет в Гранд Каньон и толпится там</p>
             </div>
@@ -176,13 +176,12 @@
         </ul>
       </div>
 
-      <div class="copyright">
+      <a class="copyright" href="https://htmlacademy.ru/intensive/adaptive">
         <span class="copyright__text">Разработано</span>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img src="./img/icon--html-logo.svg" alt="" width="27" height="35">
-          <span class="visually-hidden">HTML Academy</span>
-        </a>
-      </div>
+        <svg width="27" height="35">
+          <use xlink:href="./img/sprite.svg#icon--html-logo" />
+        </svg>
+      </a>
     </footer>
   </div>
   <script src="./js/script.min.js"></script>
