--- a/source/catalog.html
+++ b/source/catalog.html
@@ -28,8 +28,8 @@
               Главная
             </a>
           </li>
-          <li class="main-nav__item main-nav__item--current">
-            <a class="main-nav__link">
+          <li class="main-nav__item ">
+            <a class="main-nav__link main-nav__link--current">
               Фото и видео
             </a>
           </li>
@@ -67,6 +67,7 @@
           <li class="catalog__card catalog__card--full">
             <a class="catalog__image-wrapper" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="./img/catalog-1-desktop.webp 1x, ./img/catalog-1-desktop-2x.webp 2x">
                 <source media="(min-width: 1200px)" srcset="./img/catalog-1-desktop.jpg 1x, ./img/catalog-1-desktop-2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="./img/catalog-1-tablet.jpg 1x, ./img/catalog-1-tablet-2x.jpg 2x">
                 <img class="catalog__image" src="./img/catalog-1.jpg" srcset="./img/catalog-1.jpg 1x, ./img/catalog-1-2x.jpg 2x" alt="Пейзаж дороги в Седону.">
@@ -86,6 +87,7 @@
           <li class="catalog__card">
             <a class="catalog__image-wrapper" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="./img/catalog-2-desktop.webp 1x, ./img/catalog-2-desktop-2x.webp 2x">
                 <source media="(min-width: 1200px)" srcset="./img/catalog-2-desktop.jpg 1x, ./img/catalog-2-desktop-2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="./img/catalog-2-tablet.jpg 1x, ./img/catalog-2-tablet-2x.jpg 2x">
                 <img class="catalog__image" src="./img/catalog-2.jpg" srcset="./img/catalog-2.jpg 1x, ./img/catalog-2-2x.jpg 2x" alt="Растения в окрестностях Седоны.">
@@ -105,6 +107,7 @@
           <li class="catalog__card">
             <a class="catalog__image-wrapper" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="./img/catalog-3-desktop.webp 1x, ./img/catalog-3-desktop-2x.webp 2x">
                 <source media="(min-width: 1200px)" srcset="./img/catalog-3-desktop.jpg 1x, ./img/catalog-3-desktop-2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="./img/catalog-3-tablet.jpg 1x, ./img/catalog-3-tablet-2x.jpg 2x">
                 <img class="catalog__image" src="./img/catalog-3.jpg" srcset="./img/catalog-3.jpg 1x, ./img/catalog-3-2x.jpg 2x" alt="Горный серпантин.">
@@ -124,6 +127,7 @@
           <li class="catalog__card">
             <a class="catalog__image-wrapper" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="./img/catalog-4-desktop.webp 1x, ./img/catalog-4-desktop-2x.webp 2x">
                 <source media="(min-width: 1200px)" srcset="./img/catalog-4-desktop.jpg 1x, ./img/catalog-4-desktop-2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="./img/catalog-4-tablet.jpg 1x, ./img/catalog-4-tablet-2x.jpg 2x">
                 <img class="catalog__image" src="./img/catalog-4.jpg" srcset="./img/catalog-4.jpg 1x, ./img/catalog-4-2x.jpg 2x" alt="Вид на горы Седоны.">
@@ -145,17 +149,16 @@
       <section class="section-content video">
         <div class="section-content__inner">
         <h2 class="section-content__title">Все еще сомневаетесь?</h2>
-        <p class="section-content__description">Смотрите видеопрезентацию и скорее за билетами, пока они<br> не подорожали в
+        <p class="section-content__description">Смотрите видеопрезентацию и скорее&nbsp;за&nbsp;билетами, пока они<br> не подорожали в
           очередной
           раз!</p>
           </div>
         <div class="video__content">
           <picture>
+            <source type="image/webp" media="(min-width: 1200px)" srcset="./img/video-desktop.webp 1x, ./img/video-desktop-2x.webp 2x">
             <source media="(min-width: 1200px)" srcset="./img/video-desktop.jpg 1x, ./img/video-desktop-2x.jpg 2x">
             <source media="(min-width: 768px)" srcset="./img/video-tablet.jpg 1x, ./img/video-tablet-2x.jpg 2x">
-            <img class="video__poster" width="280" height="177" src="img/video-mobile.jpg"
-                 srcset="./img/video-mobile.jpg 1x, ./img/video-mobile-2x.jpg 2x" alt="Видеопрезентация Седоны."
-                 loading="lazy">
+            <img class="video__poster" width="280" height="177" src="img/video-mobile.jpg" srcset="./img/video-mobile.jpg 1x, ./img/video-mobile-2x.jpg 2x" alt="Видеопрезентация Седоны.">
           </picture>
           <button class="video__play" type="button">
             <span class="visually-hidden">Проигрывать видео.</span>
@@ -197,13 +200,12 @@
         </ul>
       </div>
 
-      <div class="copyright">
+      <a class="copyright" href="https://htmlacademy.ru/intensive/adaptive">
         <span class="copyright__text">Разработано</span>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img src="./img/icon--html-logo.svg" alt="" width="27" height="35">
-          <span class="visually-hidden">HTML Academy</span>
-        </a>
-      </div>
+        <svg width="27" height="35">
+          <use xlink:href="./img/sprite.svg#icon--html-logo" />
+        </svg>
+      </a>
     </footer>
   </div>
   <script src="./js/script.min.js"></script>
